# linked-past

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  datasets.yaml  main.py  package-lock.json  pyproject.toml
.claude/: settings.json
.claude/skills/dprr/: SKILL.md
.claude/skills/entity-enrichment/: entity-enrichment.md
.devcontainer/: WELCOME.md  devcontainer.json  setup.sh  start.sh
.github/workflows/: ci.yml  clean-datasets.yml  deploy-viewer.yml  ingest-pleiades.yml  publish-image.yml  release.yml  update-datasets.yml
data/: DATA-LICENSE
docs/: architecture.md  cross-link-enrichment-findings.md  cross-link-enrichment-opportunities.md  data-lifecycle.md  offline-and-caching.md  rfc-oci-lod-distribution.md
docs/feedback/: mcp-tool-usability-report.md
docs/plans/: 2026-02-25-dprr-implementation-plan.md  2026-02-25-schema-examples-fix-design.md  2026-02-28-rename-dprr-mcp-design.md
docs/superpowers/plans/: 2026-03-30-cross-dataset-linking.md  2026-03-30-dprr-pleiades-province-enrichment.md  2026-03-30-entity-linking.md  2026-03-30-linked-past-advanced.md  2026-03-30-linked-past-core.md  2026-03-30-linked-past-datasets.md  2026-03-30-rdf-oci-enhancements.md  2026-03-31-blob-level-caching.md  2026-03-31-data-pipeline.md  2026-03-31-enhanced-validation.md  2026-03-31-ontology-pipeline-integration.md  (+13 more)
dprr_mcp/: fetch.py  mcp_server.py  store.py  validate.py
dprr_mcp/context/: examples.yaml  schemas.yaml  tips.yaml
dprr_tool/: cli.py  mcp_server.py  prompts.py  store.py  validate.py
dprr_tool/context/: __init__.py  examples.yaml  prefixes.yaml  schemas.yaml  tips.yaml
linked_past/: __init__.py
linked_past/core/: fetch.py  linkage.py  registry.py  server.py  validate.py
linked_past/datasets/: base.py
linked_past/linkages/: dprr_nomisma_confirmed.yaml  dprr_nomisma_probable.yaml  dprr_pleiades.yaml
scripts/: clean_dataset.py  disambiguate_edh.py  disambiguate_nomisma.py  extract_wikidata_concordances.py  ingest_dprr.py  ingest_edh.py  ingest_generic.py  ingest_nomisma.py  ingest_periodo.py  ingest_pleiades.py  match_dprr_edh.py  match_dprr_nomisma.py  package_crro.py  package_dprr.py  package_edh.py  package_nomisma.py  package_ocre.py  package_periodo.py  package_pleiades.py  pipeline_config.py  semantic_match_edh.py  validate_dataset.py
scripts/tests/: test_pipeline_config.py  test_validate_dataset.py
site/: caveat-utilitor.html  index.html  style.css
site/examples/: index.html
tests/: test_advanced_tools.py  test_base.py  test_cli.py  test_context.py  test_context_loader.py  test_core_context.py  test_core_fetch.py  test_core_store.py  test_core_validate.py  test_crro_plugin.py  test_dprr_plugin.py  test_edh_plugin.py  test_embeddings.py  test_fetch.py  test_integration.py  test_linkage.py  test_linked_past_integration.py  test_mcp_server.py  test_multi_dataset_integration.py  test_nomisma_plugin.py  test_ocre_plugin.py  test_periodo_plugin.py  test_pipeline.py  test_pleiades_plugin.py  test_prompts.py  test_registry.py  test_server.py  test_store.py  test_validate.py
(+45 files in other folders)
