[project]
name = "dprr-mcp"
version = "0.1.0"
description = "Natural language SPARQL queries for the Digital Prosopography of the Roman Republic"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pyoxigraph",
    "rdflib",
    "pyyaml",
    "mcp",
    "toons>=0.5.3",
]

[project.scripts]
dprr-server = "dprr_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
analysis = [
    "pandas",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"dprr_mcp/mcp_server.py" = ["E501"]  # MCP tool docstrings must be single-line

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::RuntimeWarning:importlib",
    "ignore::RuntimeWarning:yaml",
]
