[project]
name = "linked-past"
version = "0.1.0"
description = "Multi-dataset prosopographical SPARQL tools for AI agents. Natural-language queries with scholarly citations across linked ancient world datasets."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pyoxigraph",
    "rdflib",
    "pyyaml",
    "mcp",
    "oras",
    "toons>=0.5.3",
    "fastembed",
    "numpy",
]

[project.scripts]
linked-past-server = "linked_past.core.server:main"
dprr-server = "linked_past.core.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
analysis = [
    "pandas",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"linked_past/core/server.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::RuntimeWarning:importlib",
    "ignore::RuntimeWarning:yaml",
]
