[project]
name = "linked-past-workspace"
version = "0.0.0"
description = "Workspace root for the linked-past monorepo"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "linked-past",
    "linked-past-store",
    "pytest",
    "pytest-asyncio",
    "ruff",
]
analysis = [
    "pandas",
]

[tool.uv.sources]
linked-past = { workspace = true }
linked-past-store = { workspace = true }

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"packages/linked-past/tests/*" = ["E501"]
"packages/linked-past/linked_past/core/server.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/linked-past/tests", "packages/linked-past-store/tests", "scripts/tests"]
import_mode = "importlib"
filterwarnings = [
    "ignore::RuntimeWarning:importlib",
    "ignore::RuntimeWarning:yaml",
]
